报告内容保存接口
