# swagger_server/models/patent_report_detail_res.py
@@ -1,0 +1,63 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.patent_report_detail_res_data import PatentReportDetailResData  # noqa: F401,E501
+from swagger_server import util
+
+
+class PatentReportDetailRes(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data: PatentReportDetailResData=None):  # noqa: E501
+        """PatentReportDetailRes - a model defined in Swagger
+
+        :param data: The data of this PatentReportDetailRes.  # noqa: E501
+        :type data: PatentReportDetailResData
+        """
+        self.swagger_types = {
+            'data': PatentReportDetailResData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PatentReportDetailRes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PatentReportDetailRes of this PatentReportDetailRes.  # noqa: E501
+        :rtype: PatentReportDetailRes
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> PatentReportDetailResData:
+        """Gets the data of this PatentReportDetailRes.
+
+
+        :return: The data of this PatentReportDetailRes.
+        :rtype: PatentReportDetailResData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: PatentReportDetailResData):
+        """Sets the data of this PatentReportDetailRes.
+
+
+        :param data: The data of this PatentReportDetailRes.
+        :type data: PatentReportDetailResData
+        """
+
+        self._data = data
