# swagger_server/models/patent_report_req.py
@@ -1,0 +1,140 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class PatentReportReq(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, id: int=None, user_id: str=None, title: str=None, batch_id: str=None):  # noqa: E501
+        """PatentReportReq - a model defined in Swagger
+
+        :param id: The id of this PatentReportReq.  # noqa: E501
+        :type id: int
+        :param user_id: The user_id of this PatentReportReq.  # noqa: E501
+        :type user_id: str
+        :param title: The title of this PatentReportReq.  # noqa: E501
+        :type title: str
+        :param batch_id: The batch_id of this PatentReportReq.  # noqa: E501
+        :type batch_id: str
+        """
+        self.swagger_types = {
+            'id': int,
+            'user_id': str,
+            'title': str,
+            'batch_id': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'user_id': 'user_id',
+            'title': 'title',
+            'batch_id': 'batch_id'
+        }
+        self._id = id
+        self._user_id = user_id
+        self._title = title
+        self._batch_id = batch_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PatentReportReq':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PatentReportReq of this PatentReportReq.  # noqa: E501
+        :rtype: PatentReportReq
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> int:
+        """Gets the id of this PatentReportReq.
+
+
+        :return: The id of this PatentReportReq.
+        :rtype: int
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: int):
+        """Sets the id of this PatentReportReq.
+
+
+        :param id: The id of this PatentReportReq.
+        :type id: int
+        """
+
+        self._id = id
+
+    @property
+    def user_id(self) -> str:
+        """Gets the user_id of this PatentReportReq.
+
+
+        :return: The user_id of this PatentReportReq.
+        :rtype: str
+        """
+        return self._user_id
+
+    @user_id.setter
+    def user_id(self, user_id: str):
+        """Sets the user_id of this PatentReportReq.
+
+
+        :param user_id: The user_id of this PatentReportReq.
+        :type user_id: str
+        """
+
+        self._user_id = user_id
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this PatentReportReq.
+
+
+        :return: The title of this PatentReportReq.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this PatentReportReq.
+
+
+        :param title: The title of this PatentReportReq.
+        :type title: str
+        """
+
+        self._title = title
+
+    @property
+    def batch_id(self) -> str:
+        """Gets the batch_id of this PatentReportReq.
+
+
+        :return: The batch_id of this PatentReportReq.
+        :rtype: str
+        """
+        return self._batch_id
+
+    @batch_id.setter
+    def batch_id(self, batch_id: str):
+        """Sets the batch_id of this PatentReportReq.
+
+
+        :param batch_id: The batch_id of this PatentReportReq.
+        :type batch_id: str
+        """
+
+        self._batch_id = batch_id
