# swagger_server/models/patent_report_res.py
@@ -1,0 +1,63 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.patent_report_res_data import PatentReportResData  # noqa: F401,E501
+from swagger_server import util
+
+
+class PatentReportRes(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data: PatentReportResData=None):  # noqa: E501
+        """PatentReportRes - a model defined in Swagger
+
+        :param data: The data of this PatentReportRes.  # noqa: E501
+        :type data: PatentReportResData
+        """
+        self.swagger_types = {
+            'data': PatentReportResData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PatentReportRes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PatentReportRes of this PatentReportRes.  # noqa: E501
+        :rtype: PatentReportRes
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> PatentReportResData:
+        """Gets the data of this PatentReportRes.
+
+
+        :return: The data of this PatentReportRes.
+        :rtype: PatentReportResData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: PatentReportResData):
+        """Sets the data of this PatentReportRes.
+
+
+        :param data: The data of this PatentReportRes.
+        :type data: PatentReportResData
+        """
+
+        self._data = data
